--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                     <input type="text" id="referral-link" readonly>
                     <button class="copy-btn" id="copy-link-btn"><i class="fas fa-copy"></i> نسخ</button>
                 </div>
-                
+                            <div class="tab reports" onclick="window.location.href='reports.html'">لوحة المشرفين</div>
                 <div class="social-share">
                     <button class="social-btn facebook" id="share-fb"><i class="fab fa-facebook"></i> فيسبوك</button>
                     <button class="social-btn twitter" id="share-twitter"><i class="fab fa-twitter"></i> تويتر</button>
